<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuAdd"
        android:icon="@android:drawable/ic_menu_add"
        android:onClick="onAddButtonClick"
        android:title="@string/menu_add"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/menuTaskAll"
        android:title="@string/menu_task_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuTaskIncomplete"
        android:title="@string/menu_task_incomplete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuTaskComplete"
        android:title="@string/menu_task_complete"
        app:showAsAction="never"/>

</menu>